qtspell 0.1.0 (Sep 03 2014):
 * First release